07/10_ingress/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-main-app-service
spec:
  type: ClusterIP
  selector:
    app: my-main-app
  ports:
    - protocol: TCP
      port: 5678          # Port on the Service
      targetPort: 5678    # Port on the Pod

---

apiVersion: v1
kind: Service
metadata:
  name: my-subpath-app-service
spec:
  type: ClusterIP
  selector:
    app: my-subpath-app
  ports:
    - protocol: TCP
      port: 5678          # Port on the Service
      targetPort: 5678    # Port on the Pod
